# nickyvanoorschot_mads_exam_24

./: .gitignore  .lefthook.yml  Makefile  README.md  hypertune.py  mads_exam.db  minimal_ray.py  pyproject.toml
logs/20240620-090751/: events.out.tfevents.1718874471.ML-RefVm-465781.54400.0
logs/20240620-090836/: events.out.tfevents.1718874517.ML-RefVm-465781.54912.0
logs/20240620-111049/: events.out.tfevents.1718881850.ML-RefVm-465781.96099.0
logs/20240620-111210/: events.out.tfevents.1718881931.ML-RefVm-465781.96639.0
logs/20240620-111318/: events.out.tfevents.1718881998.ML-RefVm-465781.97104.0
logs/20240620-112011/: events.out.tfevents.1718882412.ML-RefVm-465781.100089.0
logs/20240620-112422/: events.out.tfevents.1718882663.ML-RefVm-465781.102258.0
logs/20240620-112442/: events.out.tfevents.1718882683.ML-RefVm-465781.102483.0
logs/20240621-093314/: events.out.tfevents.1718962394.ML-RefVm-465781.31599.0
logs/20240621-093359/: events.out.tfevents.1718962439.ML-RefVm-465781.31995.0
logs/20240621-093425/: events.out.tfevents.1718962466.ML-RefVm-465781.32286.0
logs/20240621-103646/: events.out.tfevents.1718966207.ML-RefVm-465781.61053.0
logs/20240621-103726/: events.out.tfevents.1718966247.ML-RefVm-465781.61429.0
logs/20240621-122509/: events.out.tfevents.1718972710.ML-RefVm-465781.105325.0
logs/20240621-122653/: events.out.tfevents.1718972814.ML-RefVm-465781.106070.0
logs/20240621-122751/: events.out.tfevents.1718972871.ML-RefVm-465781.106689.0
models/: vaemodel.pt
notebooks/: 01_2D-models.ipynb  01_explore-heart.ipynb  02_2D-models.ipynb  02_RAE_model.ipynb  03_1D-models.ipynb  04_RAE_model.ipynb  04_VAE_model.ipynb  05_2D_model.ipynb  mads_exam.db
src/: AutoEncoder_Abnormal_normal.py  RAE.py  config.gin  datasets.py  exam.py  hypertune_entrymodel.py  hypertune_grid_rae.py  models.py  rae_config.gin  rae_model.py  streamer.py  vae.py
visuals/: thresholdsearch.txt
(+365 files in other folders)
