[project]
name = "MADS-exam-24"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Raoul Grouls", email = "Raoul.Grouls@han.nl"},
]
dependencies = [
    "mltrainer>=0.1.122",
    "mads-datasets>=0.3.10",
    "seaborn>=0.13.1",
    "hpbandster>=0.7.4",
    "configspace>=0.7.1",
    "bayesian-optimization>=1.4.3",
    "torch-tb-profiler>=0.4.3",
    "tensorboard>=2.15.1",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "black>=23.12.1",
    "isort>=5.13.2",
]
