[project]
name = "MADS-exam-24"
version = "0.1.0"
description = "Code for MADS deep learning exam"
authors = [
    {name = "Raoul Grouls", email = "Raoul.Grouls@han.nl"},
]
dependencies = [
    "mltrainer==0.1.10",
    "mads-datasets>=0.3.10",
    "seaborn>=0.13.1",
    "hpbandster>=0.7.4",
    "ConfigSpace>=0.7.1",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}



[tool.pdm]
distribution = false
[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "black>=23.12.1",
    "isort>=5.13.2",
]
